--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nency1210.github.io/portfolio",
+  "homepage": "https://portfolio.nency",
   "name": "react-portfolio-website-master",
   "version": "1.0.0",
   "description": "Your app description",
